# openapi.yaml
@@ -40,7 +40,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Common500Response"
-
   /auth/logout:
     post:
       responses:
@@ -62,7 +61,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Common500Response"
-
   /auth/me:
     get:
       responses:
@@ -88,6 +86,34 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Common500Response"
+  /task:
+    get:
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                properties:
+                  tasks:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/Task"
+                required:
+                  - tasks
+        '401':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Common401Response"
+        '500':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Common500Response"
+
 
 components:
   schemas:
@@ -100,6 +126,30 @@ components:
       required:
         - userId
         - avatarUrl
+    Task:
+      properties:
+        taskId:
+          type: string
+        title:
+          type: string
+        description:
+          type: string
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
+        createdBy:
+          type: string
+          description: userId
+      required:
+        - taskId
+        - title
+        - description
+        - createdAt
+        - updatedAt
+        - createdBy
     Common200Response:
       properties:
         message:
@@ -125,8 +175,6 @@ components:
       required:
         - message
 
-  # /auth/logout:
-  #   post:
   # /task:
   #   get:
   # /task/{taskId}:
